# multi-gpu-sparse-la

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  build_all.slurm  build_all_script.sh  build_mfem.slurm  build_mfem_script.sh  build_script.sh  configure.sh  mfem_build.err  mfem_build.out  run.sh  submit.sh
benchmarks/: bench_generic.slurm  poisson_bench.cpp  poisson_bench.slurm  poisson_bench_hypre_gpu.cpp  poisson_bench_hypre_gpu.slurm
examples/: README.md  dg.slurm  dg_diffusion.cpp  simple.cpp  simple.slurm
include/: comm_pkg.h  par_bell.h  par_bsr.h  par_csr.h  utils.h
src/: comm_pkg.cpp  logging.cpp  main_mpi.cpp  par_bell.cu  par_bsr.cu  par_bsr_mfem.cpp  par_csr.cu  stage_logger.cpp
tests/: poisson.cpp  poisson.slurm
tools/: cuda_smoketest.cu  ncu_smoketest.slurm  scaling_study.py  strong_scale_nobuild.sh  weak_scale.sh  weak_scale_nobuild.sh
